--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "css-loader": "^1.0.0",
     "raw-loader": "^3.1.0",
     "style-loader": "^0.21.0",
+    "postcss-apply": "^0.12.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
+    "postcss-nesting": "^7.0.0",
+    "postcss-nested-ancestors": "^2.0.0",
+    "postcss-preset-env": "^6.6.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   }
