--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "Inline tool to change font size for Editor.js",
   "license": "MIT",
   "repository": "https://github.com/arwazjamal/editorjs-inline-font-size",
-  "main": "/dist/bundle.js",
+  "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development --watch"
